syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "api/grpc/v1/log_entry;log_entry_grpc_service";

message UpsertLogEntryGrpcRequest {
  string id = 1;
  string tenant = 2;
  string userId = 3;
  string content = 4;
  string contentType = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  google.protobuf.Timestamp startedAt = 8;
  string appSource = 9;
  string source = 10;
  string sourceOfTruth = 11;
  optional string authorUserId = 12;
  optional string loggedOrganizationId = 13;
}

message AddTagGrpcRequest {
  string id = 1;
  string tenant = 2;
  string userId = 3;
  string tagId = 4;
}

message RemoveTagGrpcRequest {
  string id = 1;
  string tenant = 2;
  string userId = 3;
  string tagId = 4;
}

message LogEntryIdGrpcResponse {
  string id = 1;
}

service logEntryGrpcService {
  rpc UpsertLogEntry(UpsertLogEntryGrpcRequest) returns (LogEntryIdGrpcResponse);
  rpc AddTag(AddTagGrpcRequest) returns (LogEntryIdGrpcResponse);
  rpc RemoveTag(RemoveTagGrpcRequest) returns (LogEntryIdGrpcResponse);
}
